# health_coach

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
scripts/: run_agent.py  streamlit_app.py
src/health_coach/: __init__.py  agent.py  cli.py  interview.py  models.py  parser.py  reports.py  tools.py
tests/: test_cli.py  test_interview_and_reports.py  test_parser.py  test_tools.py
